Fix logo visibility

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,6 +30,11 @@
 .logo-img {
   height: 40px;
   width: auto;
+  display: block;
+}
+
+.logo-img[src=""] {
+  display: none;
 }
 
 .logo-icon {
